tests/golden/parse_errors/map_type_missing_value.err
Parse error at 1:23: expected `,` between map key and value types, found Greater `>`
  let values: map<string> = {};
                        ^
Parse error at 1:29: expected expression
  let values: map<string> = {};
                              ^
